--- a/Backend/public/k9m6gb0fk/database_viewer.html
+++ b/Backend/public/k9m6gb0fk/database_viewer.html
@@ -11,7 +11,7 @@
             
             async function getData()
             {
-                const response = await fetch('https://moonrise-sc.loca.lt/moonriseapi')
+                const response = await fetch('/moonriseapi')
                 const data = await response.json();
 
                 for(item of data)
