--- a/Backend/public/k9m6gb0fk/index.html
+++ b/Backend/public/k9m6gb0fk/index.html
@@ -25,7 +25,7 @@
                             body: JSON.stringify(data)
                         };
 
-                        let response = await fetch('/moonriseadduser', options);
+                        let response = await fetch('/k3g5hfdo', options);
                         let json = await response.json();
 
                         console.log(json);
